added z-offset for collection to make it look more 3d as per the design. I should make my code a little cleaner by separating the collection view data and delegate to other files instead of extensions.. I will also complete the customize pop over and didFinishSelecting drink... also tabView highlighting and sizing icon fixes

--- a/MoreMocha/Resources/Base.lproj/Main.storyboard
+++ b/MoreMocha/Resources/Base.lproj/Main.storyboard
@@ -129,8 +129,8 @@
                                                     </collectionViewCell>
                                                 </cells>
                                                 <connections>
-                                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="x0g-gj-31r"/>
-                                                    <outlet property="delegate" destination="BYZ-38-t0r" id="jRt-Oe-SeR"/>
+                                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="hiN-oM-oCY"/>
+                                                    <outlet property="delegate" destination="BYZ-38-t0r" id="sgm-xx-PeN"/>
                                                 </connections>
                                             </collectionView>
                                         </subviews>
